# sage-app

./: .dockerignore  .gitignore  .oxfmtrc.json  .prettierrc  AGENTS.md  Cargo.toml  Dockerfile  README.md  eslint.config.js  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.claude/: CLAUDE.md
.claude/rules/: api.md  frontend.md  monorepo.md  science.md  ui.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  oci-build-image.yml  pr.yml
.husky/: pre-commit
.zed/: settings.json
apps/api/: .env  .eslintrc.js  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc  AGENTS.md  db-defs.sh  eslint.config.mjs  graphql-codegen.ts  jest.config.ts  jest.setup.ts  jest.teardown.ts  nest-cli.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/api/config/: config.ts
apps/api/prisma/: ERD.md  schema.prisma  schema.zmodel
apps/api/schema/: schema.gql
apps/api/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  db.service.ts  main.ts  mikro-orm-test.config.ts  mikro-orm.config.ts
apps/api/test/: app-test.module.ts  graphql.utils.ts  jest.e2e-config.ts  setup.ts  vitest.d.ts
apps/frontend/: .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  .tolgeerc  AGENTS.md  README.md  app.vue  capacitor.config.json  codegen.ts  components.json  cypress.config.ts  error.vue  eslint.config.mjs  ionic.config.json  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/frontend/android/: capacitor.settings.gradle
apps/frontend/app/: app.vue
apps/frontend/dist-isolation/: index.js
apps/frontend/gql/: gql.ts  graphql.ts  types.generated.ts
apps/frontend/layouts/: default.vue  main-tabs.vue
apps/frontend/middleware/: page.global.ts
apps/frontend/modules/: graphql.ts
apps/frontend/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
apps/frontend/src-tauri/capabilities/: default.json  mobile.json
apps/frontend/src-tauri/icons/: icon.icns
apps/frontend/src-tauri/src/: lib.rs  main.rs
apps/science/: .oxfmtrc.json  .oxlintrc.json  .tolgeerc  AGENTS.md  app.vue  codegen.ts  nuxt.config.ts  package.json  tsconfig.storybook.json
patches/: @mikro-orm__postgresql.patch  graphql@16.11.0.patch
test/frontend/: .env  package.json  playwright.config.ts
(+558 files in other folders)
