[workspace]
members = ["./apps/frontend/src-tauri"]
resolver = "3"

[workspace.package]
repository = "https://github.com/CAJ2/sage-app"
authors = ["Christian Johansen <johansen.christian.a@gmail.com>"]
version = "0.1.0"
license = "AGPL-3.0"
edition = "2024"
rust-version = "1.93.0"

[workspace.dependencies]
serde_json = "1.0"
serde = "1.0"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-barcode-scanner = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true