[workspace]
members = ["apps/frontend/src-tauri", "packages/scanleaf"]
resolver = "3"

[workspace.package]
repository = "https://github.com/sage-eco/sageleaf"
authors = ["Christian Johansen <johansen.christian.a@gmail.com>"]
version = "0.1.0"
license = "AGPL-3.0"
edition = "2024"
rust-version = "1.93.0"

[workspace.dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "2"
tauri = { version = "2.10.0", features = [] }
tauri-build = "2.5"
tauri-plugin = "2.5"
tauri-utils = "2.8"
tauri-plugin-log = "2.8"
tauri-plugin-geolocation = "2.3.2"
sageleaf-scanleaf = { path = "packages/scanleaf" }
tauri-plugin-sql = "2.3.2"
tauri-plugin-opener = "2.5.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
