[package]
name = "sageleaf-frontend"
description = "SageLeaf Frontend App"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "sageleaf_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = ["isolation"] }

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
log.workspace = true
tauri = { version = "2.10.0", features = ["isolation"] }
tauri-plugin-log.workspace = true

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner.workspace = true
